# methylFracAnalyzer

./: .gitignore  README.md  analyze_feature_percentile.py  analyze_feature_rate.py  analyze_genome_frac.py  analyze_genome_map_rate.py  analyze_main.py  analyze_phasing.py  pyproject.toml  requirements.txt
config/: example_sample.toml  resource.toml
methylFracAnalyzer/: analyze_feature_percentile.py  analyze_genome_frac.py  analyze_main.py  lazy_group.py
resource/: .csv  MCF10_CTCF_ENCSR193SZD.csv  MCF10_RNAseq_ATAC.csv  MCF7_CTCF_ENCSR000AHD.csv  MCF7_MNase.CTCF_average_phasing.csv  MCF7_MNase1P.gene_average_phasing.csv  active_hor.csv  cenpA_location.csv  centromere_element.csv  centromere_location.csv
