[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Analyze Methylated Fraction (Cut by DpnI)"
version = "1.0.0"
description = "Process the bigwig file from the Snakemake workflow"
authors = [
    {name = "Zhuwei Xu", email="zhuweix8@gmail.com"},
    ]
keywords = ["Bioinformatics", "Illumina sequencing", "DpnI", "Methylated Fraction"]

readme = "README.md"
license = {text = "MIT License"}

requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    ]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
analzye_dpni="analyze_main:cli"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


